--- a/Lintukoto-sovellus/src/app/navbar/navbar.component.html
+++ b/Lintukoto-sovellus/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-white bg-dark">
-    <a class="navbar-brand" href="#">Lintukoto</a>
+    <a class="navbar-brand">Lintukoto</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -20,39 +20,45 @@
           class="nav-item nav-link active"
           routerLink="/kalenteri"
           routerLinkActive="router-link-active"
-          >Kalenteri <span class="sr-only">(current)</span></a>
+          >Kalenteri <span class="sr-only">(current)</span></a
+        >
 
         <a
           class="nav-item nav-link white"
           routerLink="/aktiiviset"
           routerLinkActive="router-link-active"
-          >Aktiiviset kurssit</a>
+          >Aktiiviset kurssit</a
+        >
 
         <a
           class="nav-item nav-link white"
           routerLink="/suoritetut"
           routerLinkActive="router-link-active"
-          >Suoritetut kurssit</a>
+          >Suoritetut kurssit</a
+        >
 
         <a
           class="nav-item nav-link white"
           routerLink="/asetukset"
           routerLinkActive="router-link-active"
-          >Asetukset</a>
+          >Asetukset</a
+        >
 
         <a
-        class="nav-item nav-link white"
-        *ngIf = "!authService.loggedIn"
-        routerLink="/kirjautuminen"
-        routerLinkActive="router-link-active"
-        >Kirjautuminen</a>
+          class="nav-item nav-link white"
+          *ngIf="!authService.loggedIn"
+          routerLink="/kirjautuminen"
+          routerLinkActive="router-link-active"
+          >Kirjaudu sisään</a
+        >
 
-        <a class="nav-item nav-link white"
-        *ngIf = "authService.loggedIn"
-        (click) = "authService.logout()"
-        routerLinkActive="router-link-active" 
-        >Kirjaudu ulos</a>
-
+        <a
+          class="nav-item nav-link white"
+          *ngIf="authService.loggedIn"
+          (click)="authService.logout()"
+          [routerLink]="['/']"
+          >Kirjaudu ulos</a
+        >
       </div>
     </div>
   </nav>
