--- a/Lintukoto-sovellus/src/app/pesa/pesa.component.html
+++ b/Lintukoto-sovellus/src/app/pesa/pesa.component.html
@@ -1,33 +1,62 @@
 <body>
-<h1>Henkipöllön pesä</h1>
-<p>Tervetuloa Henkipöllön pesään!<br>
-Henkipöllö on nähnyt yhtä ja toista vuosien saatossa ja hän on koonnut tietonsa ja oppinsa pesäkoloonsa.<br> 
-Tutustu hänen oppeihinsa täällä ja muista, että kysyvä ei tieltä eksy. Aina kannattaa pyytää apua jos vähääkään siltä tuntuu.
-</p>
+  <h1 class="otsikko margin">Henkipöllön pesä</h1>
+  <p class="otsikko margin">
+    Tervetuloa Henkipöllön pesään!<br />
+    Henkipöllö on nähnyt yhtä ja toista vuosien saatossa ja hän on koonnut
+    tietonsa ja oppinsa pesäkoloonsa.<br />
+    Tutustu hänen oppeihinsa täällä ja muista, että kysyvä ei tieltä eksy. Aina
+    kannattaa pyytää apua jos vähääkään siltä tuntuu.
+  </p>
 
-<div class="listat">
-<div class="apuaOpintoihin">
-    <h2>Apua opintoihin</h2>
-    <ul>
-        <li><a href="https://opinto-oppaat.jamk.fi/fi/opinto-opas-yamk/hyvinvointi-ja-opiskelijaelama" target="_blank">JAMKin opiskelijan tukisivut</a></li>
-    </ul>
-</div>
+  <div class="listat margin">
+    <div class="apuaOpintoihin">
+      <h2>Apua opintoihin</h2>
+      <ul>
+        <li>
+          <a
+            href="https://opinto-oppaat.jamk.fi/fi/opinto-opas-yamk/hyvinvointi-ja-opiskelijaelama"
+            target="_blank"
+            >JAMKin opiskelijan tukisivut</a
+          >
+        </li>
+      </ul>
+    </div>
 
-<div class="valistusnurkka">
-    <h2>Valistusnurkka</h2>
-    <ul>
-        <li><a href="https://mieli.fi/fi/mielenterveys/hyvinvointi/unen-merkitys" target="_blank">Nukkuminen</a></li>
-        <li><a href="https://thl.fi/fi/web/alkoholi-tupakka-ja-riippuvuudet/tupakka" target="_blank">Tupakointi ja muut tupakkatuotteet</a></li>
-    </ul>
-</div>
+    <div class="valistusnurkka">
+      <h2>Valistusnurkka</h2>
+      <ul>
+        <li>
+          <a
+            href="https://mieli.fi/fi/mielenterveys/hyvinvointi/unen-merkitys"
+            target="_blank"
+            >Nukkuminen</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://thl.fi/fi/web/alkoholi-tupakka-ja-riippuvuudet/tupakka"
+            target="_blank"
+            >Tupakointi ja muut tupakkatuotteet</a
+          >
+        </li>
+      </ul>
+    </div>
 
-<div class="muutaMielenkiintoista">
-    <h2>Muuta mielenkiintoista</h2>
-    <ul>
-        <li><a href="https://www.nyyti.fi/opiskelijoille/opi-elamantaitoa/hallittua-ajankayttoa/" target="_blank">Ajanhallinta on taito</a></li>
-    </ul>
-</div>
-</div>
+    <div class="muutaMielenkiintoista">
+      <h2>Muuta mielenkiintoista</h2>
+      <ul>
+        <li>
+          <a
+            href="https://www.nyyti.fi/opiskelijoille/opi-elamantaitoa/hallittua-ajankayttoa/"
+            target="_blank"
+            >Ajanhallinta on taito</a
+          >
+        </li>
+      </ul>
+    </div>
+  </div>
 
-<img src="../../assets/images/HenkipolloMALLI.png" id="henkipollo_kuva" />
+  <div class="kuva">
+    <img src="../../assets/images/HenkipolloMALLI.png" id="henkipollo_kuva" />
+  </div>
 </body>
