--- a/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.css
+++ b/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.css
@@ -39,6 +39,7 @@ body {
   background-color: transparent;
   border-color: #ffffff;
   color: #ffffff;
+  margin: 1px;
 }
 img {
   margin-top: 40px;
@@ -49,7 +50,7 @@ img {
 
 .swiper-container {
   width: 100%;
-  padding-top: 150px;
+  padding-top: 20px;
   padding-bottom: 50px;
 }
 .swiper-slide {
