--- a/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.css
+++ b/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.css
@@ -2,14 +2,14 @@
 .tekstit {
   width: 500px;
 }
-.info {
+/* .info {
   position: static;
   max-width: 500px;
   margin: 10px;
-}
+} */
 /* sisäänkirjautumislomakkeen muotoilut*/
 .login {
-  width: 47%;
+  width: 40%;
   max-height: 300px;
   padding: 1em;
   align-content: center;
@@ -28,14 +28,14 @@ h2 {
 label {
   width: 70%;
   margin: 0 auto;
-  display: block;
 }
 h2,
 label {
   text-align: center;
-  position: absolute;
-  left: 45%;
-  top: 260px;
+  position: inherit;
+  width: 80%;
+  margin: 0 auto;
+  display: block;
 }
 .kirjautumisnappi {
   margin-top: 10px;
@@ -43,8 +43,8 @@ label {
 /* otsikon muotoilut*/
 .otsikko {
   position: relative;
-  top: 0px;
-  margin: 10px;
+  width: 50%;
+  display: inline-block;
 }
 
 /* kuvan muotoilut*/
@@ -58,7 +58,7 @@ img {
   margin: 1em auto;
   width: 60%;
   display: block;
-/*responsiivisuus*/
+  /*responsiivisuus*/
 }
 @media (max-width: 991px) {
   .login {
@@ -74,11 +74,5 @@ img {
     max-width: 500px;
     left: 0px;
     top: 0px;
-  }
-  .otsikko {
-    text-align: center;
-    position: relative;
-    top: 0px;
-    margin: 10px;
   }
 }
