--- a/Lintukoto-sovellus/src/app/pesa/pesa.component.html
+++ b/Lintukoto-sovellus/src/app/pesa/pesa.component.html
@@ -29,5 +29,5 @@ Tutustu hänen oppeihinsa täällä ja muista, että kysyvä ei tieltä eksy. Ai
 </div>
 </div>
 
-<img src="../../assets/images/HenkipolloMALLI.png" id="henkipollo_kuva" />
+<img src="../../assets/images/Henkipollo.svg" id="henkipollo_kuva" />
 </body>
