Lisätty sisäänkirjautumisen yhteyteen Henkipöllön kehu-kommentti

--- a/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.html
+++ b/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.html
@@ -29,8 +29,10 @@
       [(ngModel)]="loginData.password"
     />
 
-    <button class="btn btn-primary" type="submit" id="submit-btn">
+    <button class="btn btn-primary" type="submit" id="submit-btn" (click)="popup()">
       Lähetä
     </button>
+
   </form>
+
 </div>
