--- a/Lintukoto-sovellus/src/styles.css
+++ b/Lintukoto-sovellus/src/styles.css
@@ -17,3 +17,7 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   max-height: 93.8vh;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
