Dialogi-ikkunaa hieman muotoiltu

--- a/Lintukoto-sovellus/src/app/dialog/dialog.component.html
+++ b/Lintukoto-sovellus/src/app/dialog/dialog.component.html
@@ -1,10 +1,10 @@
-<h1 mat-dialog-title>Tervetuloa!</h1>
-<div mat-dialog-content>
-  <p> 
-    {{ valittuKehu }}
-</p>
-  <img src="../../assets/images/HenkipolloMALLI.png" id="henkipollo_kuva" />
+<body>
+<div class="mat-dialog-content">
+    <h1 class="mat-dialog-title">Tervetuloa!</h1>
+    <p> 
+        {{ valittuKehu }}
+    </p>
+    <img src="../../assets/images/HenkipolloMALLI.png" id="henkipollo_kuva" />
+    <button class="mat-button" mat-dialog-close>OK</button>
 </div>
-<div mat-dialog-actions>
-  <button mat-button mat-dialog-close>OK</button>
-</div>
+</body>
