--- a/Lintukoto-sovellus/src/app/dialog/dialog.component.css
+++ b/Lintukoto-sovellus/src/app/dialog/dialog.component.css
@@ -1,6 +1,28 @@
 #henkipollo_kuva {
-    width: 30%;
+    width: 40%;
     height: auto;
     float: right;
     position: relative;
+}
+
+.mat-dialog-content {
+    width: 40%; 
+    height: auto;
+    margin: 10% auto; /* 15% from the top and centered */
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 10%; 
+}
+p, h1 {
+    padding-top: 20px;
+    padding-left: 20px;
+    color: black;
+}
+
+.mat-button {
+    background-color: #335164;
+    color: #FEFEFD;
+    margin-top: 30%;
+    margin-bottom: 10%;
+    margin-left: 10%;  
 }
