--- a/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.html
+++ b/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.html
@@ -29,7 +29,7 @@
       [(ngModel)]="loginData.password"
     />
 
-    <button class="btn btn-primary" type="submit" id="submit-btn" (click)="popup()">
+    <button class="btn btn-primary" type="submit" id="submit-btn">
       Lähetä
     </button>
 
