En muista mitä tein

--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
@@ -178,7 +178,7 @@
               </option>
               <input
                 type="text"
-                value="../../assets/images/orsipollo4.png"
+                value="../../assets/images/Kurssipollo_surku1.svg"
                 hidden
                 name="kuva"
               />
