--- a/Lintukoto-sovellus/src/app/dialog/dialog.component.html
+++ b/Lintukoto-sovellus/src/app/dialog/dialog.component.html
@@ -4,7 +4,7 @@
     <p> 
         {{ valittuKehu }}
     </p>
-    <img src="../../assets/images/HenkipolloMALLI.png" id="henkipollo_kuva" />
+    <img src="../../assets/images/Henkipollo.svg" id="henkipollo_kuva" />
     <button class="mat-button" mat-dialog-close>OK</button>
 </div>
 </body>
