--- a/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.html
+++ b/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.html
@@ -1,5 +1,5 @@
-<div class="otsikko"><h1>Lintukoto</h1></div>
-<div class="otsikko tekstit">
+<div class="tekstit">
+  <h1 class="otsikko">Lintukoto</h1>
   <p>
     Lintukoto on opiskelijoiden ajanhallintaa helpottava sovellus.<br />
     Pääset sovellukseen kirjautumalla henkilökohtaisella käyttäjätunnuksella ja
@@ -7,11 +7,10 @@
   </p>
   <img src="../../assets/images/LOGO_ilman_taustaa.png" id="lintukoto_logo" />
 </div>
-
 <!--Sisäänkirjautumisen lomake-->
 <div class="login">
-  <h2 class="login-header">Kirjaudu sisään</h2>
   <form #loginForm="ngForm" (submit)="login(loginForm)">
+    <h2 class="login-header">Kirjaudu sisään</h2>
     <label for="#tunnus">Käyttäjätunnus</label>
     <input
       class="form-control"
