--- a/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.css
+++ b/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.css
@@ -1,27 +1,26 @@
 /* tekstikentän muotoilut*/
 .tekstit {
-  width: 500px;
+  width: 44%;
+  display: inline-block;
+  position: inherit;
+  margin-left: 4%;
+  top: 0%;
 }
-.info {
-  position: static;
-  max-width: 500px;
-  margin: 10px;
-}
+
 /* sisäänkirjautumislomakkeen muotoilut*/
 .login {
-  width: 47%;
-  max-height: 300px;
+  width: 42%;
   padding: 1em;
   align-content: center;
   justify-content: center;
   align-self: center;
-  margin: 0 auto;
-  display: inline-block;
+  text-align: center;
+  margin: 4em auto;
+  display: inline-flex;
 }
 
 .login input,
 h2 {
-  width: 70%;
   margin: 0.3em auto;
   display: block;
 }
@@ -33,32 +32,30 @@ label {
 h2,
 label {
   text-align: center;
-  position: absolute;
-  left: 45%;
-  top: 260px;
+  position: relative;
 }
 .kirjautumisnappi {
   margin-top: 10px;
 }
 /* otsikon muotoilut*/
 .otsikko {
+  text-align: center;
   position: relative;
-  top: 0px;
   margin: 10px;
 }
 
 /* kuvan muotoilut*/
-img {
-  max-width: 350px;
-  height: auto;
-  padding: 1em;
+#lintukoto_logo {
+  width: 350px;
+  margin: 1em auto;
+  display: block;
 }
 
 #submit-btn {
   margin: 1em auto;
   width: 60%;
   display: block;
-/*responsiivisuus*/
+  /*responsiivisuus*/
 }
 @media (max-width: 991px) {
   .login {
@@ -68,13 +65,7 @@ img {
     top: 0px;
     margin-bottom: 45px;
   }
-  .info {
-    text-align: center;
-    position: relative;
-    max-width: 500px;
-    left: 0px;
-    top: 0px;
-  }
+
   .otsikko {
     text-align: center;
     position: relative;
