--- a/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.css
+++ b/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.css
@@ -1,6 +1,7 @@
 body {
   background-image: url("../../assets/images/tapetti&pallit.png");
   background-size: cover;
+  background-position: center;
   font-size: 14px;
   color: #000;
   height: 100vh;
