--- a/Lintukoto-sovellus/src/app/navbar/navbar.component.html
+++ b/Lintukoto-sovellus/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-white navbarcustom">
-    <a class="navbar-brand" href="#">Lintukoto</a>
+    <a class="navbar-brand">Lintukoto</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -34,7 +34,8 @@
           class="nav-item nav-link white"
           routerLink="/pesa"
           routerLinkActive="router-link-active"
-          >Henkipöllön pesä</a>
+          >Henkipöllön pesä</a
+        >
 
         <a
           class="nav-item nav-link white"
