--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.css
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.css
@@ -32,6 +32,10 @@
   border-radius: 5px;
 }
 
+h5 {
+  color: white;
+}
+
 .kurssi-kortti {
   margin: 1em 2em;
   width: 180px;
@@ -44,7 +48,6 @@
 }
 .button-container {
   text-align: center;
-  background-color: #fafafa;
 }
 .linkki {
   color: burlywood;
@@ -82,7 +85,14 @@ h6 {
 .kurssi-listaus {
   text-align: center;
   padding: 0;
+  background-image: url("../../assets/images/Tapetti.png");
+  background-position: center;
+  background-size: none;
+  background-repeat: repeat;
 }
 .lisays-nappi {
   margin: 1em 1.5em;
+}
+body {
+  background-color: #335164;
 }
