--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.css
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.css
@@ -1,6 +1,11 @@
+html {
+  background-color: #335164;
+}
+
 h1 {
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  color: #fefefd;
 }
 
 /* Muokkaa asetus-sivun "kyselyjen" kokonaisuutta */
@@ -26,10 +31,12 @@ h1 {
   text-align: center;
 }
 
-.background {
+#background {
   width: 70%;
-  background-color: rgba(0, 0, 0, 0.07);
-  margin: 0 auto 2em auto;
+  background: rgb(235, 235, 235);
+  height: 100%;
+  margin: 0 auto 0 auto;
+  border: 10px solid #8f5400;
   border-radius: 8px;
   padding-top: 2em;
   padding-bottom: 2em;
@@ -39,4 +46,18 @@ h1 {
 }
 .bold {
   font-weight: bold;
+}
+.piilotaIlmoitus {
+  visibility: hidden;
+}
+.naytaIlmoitus {
+  visibility: visible;
+  color: forestgreen;
+}
+.content-container {
+  background: url("../../assets/images/Tapetti.png");
+  z-index: 0;
+  background-position: center;
+  background-repeat: repeat;
+  padding-bottom: 3em;
 }
