--- a/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
@@ -9,9 +9,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   </head>
   <body>
-    <div class="otsikko">
+    <!-- <div class="otsikko">
       <h3 class="otsikkotext">Suoritetut Kurssit</h3>
-    </div>
+    </div> -->
     <div class="kurssityht">
       <h5 class="otsikkotext">Opintopisteet yhteensä: {{ kurssityht }}</h5>
     </div>
