--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.css
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.css
@@ -89,6 +89,7 @@ h6 {
   background-position: center;
   background-size: none;
   background-repeat: repeat;
+  margin-bottom: 0;
 }
 .lisays-nappi {
   margin: 1em 1.5em;
