--- a/Lintukoto-sovellus/src/app/dialog/dialog.component.css
+++ b/Lintukoto-sovellus/src/app/dialog/dialog.component.css
@@ -1,7 +1,7 @@
 #henkipollo_kuva {
-  width: 40%;
+  width: 90%;
   height: auto;
-  float: right;
+  max-height: 100%;
   position: relative;
 }
 
@@ -10,26 +10,31 @@
   width: 100%;
   height: 100%;
   margin: 0 0;
-  padding: 0;
+  padding: 2.5em;
   border: 1px solid black;
-  border-radius: 10%;
+  border-radius: 15%;
   background-color: rgb(255, 255, 255);
+  display: grid;
+  grid-template-areas:
+    "otsikko kuva"
+    "tekstit kuva"
+    "nappi kuva";
+  text-align: center;
 }
 
 /* OK-napin muotoilut */
 .mat-button {
   background-color: #335164;
   color: #fefefd;
-  margin-top: 20%;
-  margin-bottom: 33%;
-  margin-left: 25%;
   padding: 1em;
 }
 
 /deep/.mat-dialog-container {
   background-color: rgba(255, 255, 255, 0.01) !important;
   padding: 0;
-  border-radius: 10%;
+  border-radius: 15%;
+  width: 380px;
+  height: 380px;
 }
 
 h1 {
@@ -37,5 +42,22 @@ h1 {
   margin: 0;
 }
 p {
-  padding: 1em;
+  padding: 0 1em 1em 1em;
+  margin: 0;
+}
+.kuva {
+  grid-area: kuva;
+  min-width: 190px;
+  width: 100%;
+  height: 100%;
+}
+.tekstit {
+  grid-area: tekstit;
+  width: 99%;
+}
+.otsikko {
+  grid-area: otsikko;
+}
+.nappi {
+  grid-area: nappi;
 }
