--- a/Lintukoto-sovellus/src/app/dialog/dialog.component.html
+++ b/Lintukoto-sovellus/src/app/dialog/dialog.component.html
@@ -1,8 +1,16 @@
 <div class="mat-dialog-content">
-  <h1 class="mat-dialog-title">Tervetuloa!</h1>
-  <p>
-    {{ valittuKehu }}
-  </p>
-  <img src="../../assets/images/Henkipollo.svg" id="henkipollo_kuva" />
-  <button class="mat-button" mat-dialog-close>OK</button>
+  <div class="otsikko">
+    <h1 class="mat-dialog-title">Tervetuloa!</h1>
+  </div>
+  <div class="tekstit">
+    <p>
+      {{ valittuKehu }}
+    </p>
+  </div>
+  <div class="nappi">
+    <button class="mat-button" mat-dialog-close>OK</button>
+  </div>
+  <div class="kuva">
+    <img src="../../assets/images/Henkipollo.svg" id="henkipollo_kuva" />
+  </div>
 </div>
