--- a/Lintukoto-sovellus/src/app/dialog/dialog.component.html
+++ b/Lintukoto-sovellus/src/app/dialog/dialog.component.html
@@ -1,12 +1,12 @@
 <div class="mat-dialog-content">
   <div class="otsikko">
     <h1 class="mat-dialog-title">Tervetuloa!</h1>
-  </div>
-  <div class="tekstit">
     <p>
       {{ valittuKehu }}
     </p>
   </div>
+  <!-- <div class="tekstit">
+  </div> -->
   <div class="nappi">
     <button class="mat-button" mat-dialog-close>OK</button>
   </div>
