--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
@@ -15,7 +15,7 @@
           name="tunnus"
         />
         <input
-          type="date" min="1990-01-01" max="2020-05-05"
+          type="date" id="datefield" min="1990-01-01" max="2020-05-05"
           [(ngModel)]="asetuslomake.aloituspaiva"
           name="aloituspaiva"
           class="form-control"
