Lisätty vielä kommentteja koodiin

--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
@@ -14,6 +14,8 @@
           [(ngModel)]="asetuslomake.tunnus"
           name="tunnus"
         />
+        <!--Max-arvo on tällä puolella 2020-05-05 
+          mutta ts-tiedoston puolelta siihen syötetään aina current date, joten tästä ei tarvitse välittää-->
         <input
           type="date" id="datefield" min="1990-01-01" max="2020-05-05"
           [(ngModel)]="asetuslomake.aloituspaiva"
