--- a/Lintukoto-sovellus/src/app/pesa/pesa.component.html
+++ b/Lintukoto-sovellus/src/app/pesa/pesa.component.html
@@ -2,6 +2,12 @@
   <div class="grid-container">
     <div class="otsikkoTaso">
       <h1 class="otsikko margin">Henkipöllön pesä</h1>
+      <div class="taulukuva">
+        <img
+        src="../../assets/images/taulu_untuvikolla.svg"
+        id="taulu_untuvikosta_kuva"
+      />
+      </div>
       <p class="otsikko margin">
         Tervetuloa Henkipöllön pesään!<br />
         Henkipöllö on nähnyt yhtä ja toista vuosien saatossa ja hän on koonnut
