Lisätty alt-tagit kuviin

--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
@@ -69,7 +69,7 @@
         id="kurssilista"
       >
         <div class="kurssi-kortti">
-          <img src="{{ kurssi.kuva }}" id="pollo" />
+          <img src="{{ kurssi.kuva }}" id="pollo" alt="Kuva kurssipöllöstä" />
           <h5>{{ kurssi.nimi }}</h5>
           <div id="muistiinpanolista">
             <h6>Muistiinpanot</h6>
