--- a/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.html
+++ b/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.html
@@ -5,7 +5,7 @@
     Pääset sovellukseen kirjautumalla henkilökohtaisella käyttäjätunnuksella ja
     salasanalla.
   </p>
-  <img src="../../assets/images/LOGO_ilman_taustaa.png" id="lintukoto_logo" />
+  <img src="../../assets/images/LOGO_ilman_taustaa.png" id="lintukoto_logo" alt="Lintukoto-sovelluksen logo"/>
 </div>
 <!--Sisäänkirjautumisen lomake-->
 <div class="login">
