--- a/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
@@ -23,7 +23,7 @@
           class="swiper-slide"
         >
           <div class="imgBx" id="taulu">
-            <img src="{{ kurssi.kuva }}"/>
+            <img src="{{ kurssi.kuva }}" alt="Jokaisen suoritetun kurssin persoonallisen kurssipöllön kuva"/>
           </div>
           <div class="details">
             <h3>{{ kurssi.nimi }} ({{ kurssi.pisteet }}p)</h3>
