--- a/Lintukoto-sovellus/src/app/dialog/dialog.component.html
+++ b/Lintukoto-sovellus/src/app/dialog/dialog.component.html
@@ -11,6 +11,6 @@
     <button class="mat-button" mat-dialog-close>OK</button>
   </div>
   <div class="kuva">
-    <img src="../../assets/images/Henkipollo.svg" id="henkipollo_kuva" />
+    <img src="../../assets/images/Henkipollo.svg" id="henkipollo_kuva" alt="kuva Henkipöllöstä" />
   </div>
 </div>
