pakollinen commit jotta branchin vaihto onnistuu

--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.css
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.css
@@ -60,3 +60,15 @@ h1 {
   padding-bottom: 3em;
   padding-top: 2em;
 }
+.inblock {
+  display: inline-block;
+  position: relative;
+  margin-left: 0.3em;
+  margin-bottom: 0.3em;
+}
+
+.labeli {
+  display: inline-block;
+  position: relative;
+  margin: 0 auto;
+}
