--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
@@ -101,6 +101,20 @@
 
                 <!-- Modal footer -->
                 <div class="modal-footer">
+                  <a
+                    class="icon-linkki-edit"
+                    (click)="
+                      open2(muokkaus, muistio.otsikko, muistio.muistiinpano)
+                    "
+                    ><i class="far fa-edit fa-lg"></i
+                  ></a>
+                  <a
+                    class="icon-linkki-delete"
+                    (click)="
+                      open2(poisto, muistio.otsikko, muistio.muistiinpano)
+                    "
+                    ><i class="far fa-trash-alt fa-lg"></i
+                  ></a>
                   <button
                     type="button"
                     class="btn btn-danger"
@@ -203,6 +217,112 @@
             </button>
           </div>
         </form>
+
+        <!-- this button is hidden, used to close from typescript -->
+        <button
+          type="button"
+          id="close-modal2"
+          data-dismiss="modal"
+          style="display: none"
+        >
+          Close
+        </button>
+      </div>
+    </ng-template>
+
+    <!--MUISTIINPANON MUOKKAUS MODAL-->
+
+    <ng-template #muokkaus let-modal>
+      <div class="modal-header" id="myModal4">
+        <!-- Modal Header -->
+        <h4>Muokkaa muistiinpanoa</h4>
+        <button
+          type="button"
+          class="close"
+          (click)="modal.dismiss('Cross click')"
+        >
+          &times;
+        </button>
+      </div>
+      <!-- Modal 2 body -->
+      <form
+        (submit)="submit()"
+        action="http://localhost:3000/muokkaamp"
+        method="POST"
+      >
+        <div class="modal-body muokkaus-body">
+          <label class="keskitetty-label" for="otsikko">Otsikko</label>
+          <input
+            value="{{ otsikko }}"
+            placeholder="{{ otsikko }}"
+            name="otsikko"
+            class="modal-input"
+          />
+          <label class="keskitetty-label" for="muistiinpano"
+            >Muistiinpano</label
+          >
+          <textarea class="modal-textarea" name="muistiinpano">{{
+            muistiinpano2
+          }}</textarea>
+        </div>
+        <input type="text" hidden [value]="tunnus" name="tunnus" />
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-success">
+            Tallenna
+          </button>
+          <button
+            type="button"
+            class="btn btn-danger"
+            (click)="modal.dismiss('Cross click')"
+          >
+            Sulje
+          </button>
+
+          <!-- this button is hidden, used to close from typescript -->
+          <button
+            type="button"
+            id="close-modal2"
+            data-dismiss="modal"
+            style="display: none"
+          >
+            Close
+          </button>
+        </div>
+      </form>
+    </ng-template>
+
+    <!--MUISTIINPANON POISTO MODAL-->
+
+    <ng-template #poisto let-modal>
+      <div class="modal-header" id="myModal4">
+        <!-- Modal Header -->
+        <h4>Poista muistiinpano</h4>
+        <button
+          type="button"
+          class="close"
+          (click)="modal.dismiss('Cross click')"
+        >
+          &times;
+        </button>
+      </div>
+      <!-- Modal body -->
+      <div class="modal-body">
+        <p>Haluatko varmasi poistaa muistiinpanon: {{ otsikko }}?</p>
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success">
+          Peruuta
+        </button>
+        <button
+          type="button"
+          class="btn btn-danger"
+          (click)="modal.dismiss('Cross click')"
+        >
+          Poista
+        </button>
 
         <!-- this button is hidden, used to close from typescript -->
         <button
