--- a/Lintukoto-sovellus/src/app/pesa/pesa.component.html
+++ b/Lintukoto-sovellus/src/app/pesa/pesa.component.html
@@ -60,7 +60,7 @@
 
     <div class="kuva">
       <img
-        src="../../assets/images/henkipollo5.0_oikeella.png"
+        src="../../assets/images/Henkipollo_pesassa.svg"
         id="henkipollo_kuva"
       />
     </div>
