Tapetti fixausta toivottavasti

--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.css
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.css
@@ -53,7 +53,7 @@ h1 {
   color: forestgreen;
 }
 .content-container {
-  background: url("../../assets/images/Tapetti.png");
+  background: url("../../assets/images/tapettihuone.png");
   z-index: 0;
   background-position: center;
   background-repeat: repeat;
