--- a/Lintukoto-sovellus/src/app/pesa/pesa.component.css
+++ b/Lintukoto-sovellus/src/app/pesa/pesa.component.css
@@ -1,5 +1,5 @@
 body {
-  background: url("../../assets/images/Tapetti.png");
+  background: url("../../assets/images/tapettihuone.png");
   background-position: center;
   background-repeat: repeat;
   padding-top: 2em;
