--- a/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.css
+++ b/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../../assets/images/tapetti&pallit.png");
+  background-image: url("../../assets/images/galleria_valmis.png");
   background-size: cover;
   background-position: center;
   font-size: 14px;
