--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.css
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.css
@@ -86,7 +86,7 @@ h6 {
 .kurssi-listaus {
   text-align: center;
   padding: 0;
-  background-image: url("../../assets/images/Tapetti.png");
+  background-image: url("../../assets/images/tapettihuone.png");
   background-position: center;
   background-size: none;
   background-repeat: repeat;
